app/assets/stylesheets/deskspotting.css.scss
/* ... */
.space-card.selected, .info-card.selected{
  border-bottom: solid 4px $yellow;
  .card-top-bar{
    background-color: $yellow;
    h4{
      color: white;
      text-transform: uppercase;
      font-size: 12px;
      font-weight: 400;
      letter-spacing: 0.09rem;
      padding: 12px 3px 0px;
      margin-bottom: 3px;
    }
    h3{
      padding: 0px;
      margin-top: 0px;
    }
  }
  .card-top-bar.space{
    .favourite{
      @include at2x('venue_wishlist_white_inactive', 48px, 48px);
      &.active{
        @include at2x('venue_wishlist_white_active', 48px, 48px);
      }
    }
    .space-options{
      color: white;
    }
  }
}

.venue-map{
  width: 100%;
  height: 205px;
}

.card-top-bar.location{
  position: relative;
}
.address{
  position: absolute;
  top: 27px;
  right: 23px;
  .street, .country{
    text-align: right;
    color: $gray-text;
    font-size: 14px;
    font-weight: 300;
    letter-spacing: 0.02rem;
    line-height: 20px;
  }
}

/* pagination buttons */
.pagination-container{
  text-align: right;
  width: 90%;
  margin: 0 auto;
  .pagination{
    margin: 0;
  }
  .pagination-sm > li > a{
    margin: 1px;
    padding: 6px 10px;
    font-size: 10px;
    color: $gray-text;
    border: none;
    background-color: $dark-white;
    @include border-radius(2px);
  }
  .pagination > .active > a{
    background-color: $yellow;
    color: $gray-text;
    padding: 6px 11px;
  }
  .pagination > .disabled > a{
    background-color: $dark-gray;
    color: white;
  }
}

/*fix for ui-bootstrap, angular directives */
.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }


/*  ======== USER ======== */

/* profile */
.user-header {
  .name {
    float: left;
    position: relative;
    margin-top: 35px;
    font-size: 28px;
    letter-spacing: 0.15rem;
    margin-bottom: 30px;
    &:after {
      position: absolute;
      content: '';
      width: 50px;
      height: 2px;
      background-color: $yellow;
      bottom: -15px;
      left: 0;
    }
  }
  .review-container {
    margin: 35px 0 0 10px;
  }

  .location {
    position: relative;
    padding: 0 20px;
    color: $dark-gray;
    display: inline-block;
    &:after {
      @include at2x('i-location', 14px, 20px);
      content: '';
      position: absolute;
      left: 0;
      top: 0;
      width: 14px;
      height: 20px;
    }
  }
  .since {
    display: inline-block;
    span{
      margin-left: 2px;
    }
    &:before{
      content: '·';
      margin-right: 20px;
    }
  }
}

.user-title{
  padding-top: 52px;
  text-align: center;
  .user-avatar{
    margin: 7px;
  }
}
.small-title{
  text-align: center;
  padding: 12px 0px 25px;
}
.user-profile {
  .left-panel{
    .user-avatar {
      margin: 55px 0 45px;
    }
    .about-me {
      position: relative;
      margin-bottom: 25px;
      font-size: 14px;
      letter-spacing: 0.13rem;
      color: black;
      &:after {
        position: absolute;
        content: '';
        width: 30px;
        height: 2px;
        background-color: $yellow;
        bottom: -12px;
        left: 0;
      }
    }
    .profile-element {
      margin-bottom: 5px;
      .icon{
        vertical-align: top;
        margin-top: 2px;
        margin-right: 16px;
        width: 20px;
        height: 20px;
        &.languages{
          /* TODO: get real assets */
          @include at2x('venue-default', 20px, 20px);
          background-size: 20px 20px;
        }
        &.company{
          /* TODO: get real assets */
          @include at2x('venue-default', 20px, 20px);
          background-size: 20px 20px;
        }
        &.profession{
          /* TODO: get real assets */
          @include at2x('venue-default', 20px, 20px);
          background-size: 20px 20px;
        }
      }
      p{
        display: inline-block;
        width: -moz-calc(100% - 40px);
        width: -webkit-calc(100% - 40px);
        width: calc(100% - 40px);
      }
    }
  }
}

.icon {
  width: 16px;
  height: 18px;
  display: inline-block;
  margin-right: 0px;
  background-repeat: no-repeat;
  background-position: center;
  &.info{
    @include at2x('ic_profile_info', 16px, 16px);
  }
  &.lock{
    @include at2x('ic_profile_lock', 16px, 16px);
  }
}
.user-avatar img{
  @include border-radius(100%);
}

ul.spoken-languages-container{
  position: relative;
  list-style-type: none;
  padding: 0;
  li{
    background-color: white;
    border: solid 1px $yellow;
    @include border-radius(3px);
    float: left;
    margin: 3px 0px 3px 5px;
    padding: 6px 28px 6px 12px;
    position: relative;
    .lang-name{
      font-size: 11px;
      font-weight: 300;
      line-height: 13px;
    }
    .delete-lang{
      right: 5px;
      top: 6px;
      left: initial;
      @include at2x('ic_profile_close', 11px, 11px);
      background-size: 11px 11px;
      cursor: pointer;
      display: block;
      height: 11px;
      width: 11px;
      left: auto;
      right: 5px;
      top: 6px;
      line-height: 13px;
      position: absolute;
    }
  }
}

.emergency-contact {
  margin-top: $module * 2;
  p {
    display: inline-block;
    vertical-align: text-top;
    margin: 0 5px;
    line-height: 1;
    font-size: 14px;
  }
  #emergency-toggle{
    margin-left: 20px;
  }
  hr {
    margin-top: 0;
  }
}

.buttons {
  margin: ($module * 4) 0;
  display: inline-block;
  width: 100%;
}


.staging-alert{
  width: 100px;
  height: 55px;
  overflow: scroll;
  position: fixed;
  top: 250px;
  z-index: 900;
  &:hover{
    .collapsed{
      display:none;
    }
    width: 100%;
    height: auto;
  }

}

